--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "ejs": "^2.4.2",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -15,6 +16,7 @@
     "gulp-uglify": "^1.5.4",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.5.3",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "ws": "^1.1.1"
   }
 }
